// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select snapshot size lg 1`] = `
<select
  class="text-dark-aaaa text-md max-w-full placeholder-dark-a bg-white rounded focus:border-2 p-3 h-12 border border-gray-500 disabled:text-dark-a disabled:bg-gray-200 disabled:border-light-aa w-auto component"
>
  <option
    value="chocolate"
  >
    Chocolate
  </option>
  <option
    value="vanilla"
  >
    Vanilla
  </option>
  <option
    value="strawberry"
  >
    Strawberry
  </option>
</select>
`;

exports[`Select snapshot size md 1`] = `
<select
  class="text-dark-aaaa text-md max-w-full placeholder-dark-a bg-white rounded focus:border-2 px-3 py-2 h-10 border border-gray-500 disabled:text-dark-a disabled:bg-gray-200 disabled:border-light-aa w-auto component"
>
  <option
    value="chocolate"
  >
    Chocolate
  </option>
  <option
    value="vanilla"
  >
    Vanilla
  </option>
  <option
    value="strawberry"
  >
    Strawberry
  </option>
</select>
`;

exports[`Select snapshot size sm 1`] = `
<select
  class="text-dark-aaaa text-md max-w-full placeholder-dark-a bg-white rounded focus:border-2 px-3 py-1 h-8 border border-gray-500 disabled:text-dark-a disabled:bg-gray-200 disabled:border-light-aa w-auto component"
>
  <option
    value="chocolate"
  >
    Chocolate
  </option>
  <option
    value="vanilla"
  >
    Vanilla
  </option>
  <option
    value="strawberry"
  >
    Strawberry
  </option>
</select>
`;
